// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCoursePage renders html correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunOptions={{}}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={{}}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        onSubmitFail={[Function]}
        organizations={[]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        sources={[]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly while fetching 1`] = `
<div>
  <div
    class="container my-3 content-container"
  >
    <div
      class="row justify-content-md-center"
    >
      <div
        class="col col-xl-7 col-9"
      >
        <div
          class="mx-auto text-center"
        >
          <div>
            Loading…
          </div>
          <div
            class="pgn__spinner mie-3 spinner-border"
            role="status"
          >
            <span
              class="sr-only"
            >
              loading
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateCoursePage renders page correctly with course create error 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunOptions={{}}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={{}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        onSubmitFail={[Function]}
        organizations={
          [
            {
              "key": "edx",
              "name": "edX",
            },
            {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        sources={[]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
      <ForwardRef
        dismissible={false}
        id="create-error"
        onClose={[Function]}
        show={true}
        stacked={false}
        transition={
          {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "render": [Function],
          }
        }
        variant="danger"
      >
        Fail
        <br />
      </ForwardRef>
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with course create in progress 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunOptions={{}}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={{}}
        isCreating={true}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        onSubmitFail={[Function]}
        organizations={
          [
            {
              "key": "edx",
              "name": "edX",
            },
            {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        sources={[]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with course create success 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunOptions={{}}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={{}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        onSubmitFail={[Function]}
        organizations={
          [
            {
              "key": "edx",
              "name": "edX",
            },
            {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        sources={[]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with no publisherUserInfo 1`] = `
<div>
  <div
    class="fade alert-content alert alert-danger show"
    id="error"
    role="alert"
  >
    <div
      class="pgn__alert-message-wrapper"
    >
      <div
        class="alert-message-content"
      >
        <div
          class="alert-heading h4"
        >
          Course Create Form failed to load: 
        </div>
        <p>
          User information unavailable
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateCoursePage renders page correctly with org error 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunOptions={{}}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={{}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        onSubmitFail={[Function]}
        organizations={
          [
            {
              "key": "edx",
              "name": "edX",
            },
            {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        sources={[]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
      <ForwardRef
        dismissible={false}
        id="create-error"
        onClose={[Function]}
        show={true}
        stacked={false}
        transition={
          {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "render": [Function],
          }
        }
        variant="danger"
      >
        Fail
        <br />
      </ForwardRef>
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with organizations 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunOptions={{}}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={{}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        onSubmitFail={[Function]}
        organizations={
          [
            {
              "key": "edx",
              "name": "edX",
            },
            {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        sources={
          [
            {
              "name": "souce1",
              "slug": "source1",
            },
            {
              "name": "source2",
              "slug": "source2",
            },
          ]
        }
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;
